--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "eslint": "^8.12.0"
   },
   "devDependencies": {
+    "eslint-config-eslint": "^7.0.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
